
syntax = "proto3";

package proto;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string result = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns(HelloResponse);
}

//    cd /Users/yangsen/codes/jupiter/application/proto
//    kratos tool protoc --grpc hello.proto